packages/typ/tests/fixtures/diagnostics/0958_gadt_local_abstract_return_mismatch_10.ml.expected
File "0958_gadt_local_abstract_return_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0958_gadt_local_abstract_return_mismatch_10 is not a valid module name.

File "0958_gadt_local_abstract_return_mismatch_10.ml", line 9, characters 21-22:
9 |     | WBool_kappa -> x
                         ^
Error: The value x has type a = bool but an expression was expected of type
         int
